--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" /> <!-- TODO: Replace icon -->
+    <link rel="icon" type="image/svg+xml" href="/logo.png" /> <!-- TODO: Replace icon -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>imagin3d - Moodboard Creator</title>
+    <title>imagin3d</title>
   </head>
   <body>
     <div id="root"></div>
