--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="logo.png" /> <!-- TODO: Replace icon -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>imagin3ddd</title>
+    <title>imagin3d</title>
   </head>
   <body>
     <div id="root"></div>
